Haiku/bridge/libmojobe/mojobe.h

// status_t BWindow::SetLook(window_look look)
status_t mojobe_BWindow_SetLook(BWindow* self, window_look a_look);
// window_look BWindow::Look() const
window_look mojobe_BWindow_Look(BWindow* self);
// status_t BWindow::SetFeel(window_feel feel)
status_t mojobe_BWindow_SetFeel(BWindow* self, window_feel a_feel);
// window_feel BWindow::Feel() const
window_feel mojobe_BWindow_Feel(BWindow* self);
// status_t BWindow::SetFlags(uint32 arg0)
status_t mojobe_BWindow_SetFlags(BWindow* self, uint32 a_arg0);
// uint32 BWindow::Flags() const
uint32 mojobe_BWindow_Flags(BWindow* self);
// bool BWindow::IsModal() const
bool mojobe_BWindow_IsModal(BWindow* self);
// bool BWindow::IsFloating() const
bool mojobe_BWindow_IsFloating(BWindow* self);
// status_t BWindow::SetWindowAlignment(window_alignment mode, int32 h, int32 hOffset, int32 width, int32 widthOffset, int32 v, int32 vOffset, int32 height, int32 heightOffset)
status_t mojobe_BWindow_SetWindowAlignment(BWindow* self,
	window_alignment a_mode,
	int32 a_h,
	int32 a_hOffset,
	int32 a_width,
	int32 a_widthOffset,
	int32 a_v,
	int32 a_vOffset,
	int32 a_height,
	int32 a_heightOffset);
// status_t BWindow::GetWindowAlignment(window_alignment* mode, int32* h, int32* hOffset, int32* width, int32* widthOffset, int32* v, int32* vOffset, int32* height, int32* heightOffset) const
status_t mojobe_BWindow_GetWindowAlignment(BWindow* self,
	window_alignment * a_mode,
	int32 * a_h,
	int32 * a_hOffset,
	int32 * a_width,
	int32 * a_widthOffset,
	int32 * a_v,
	int32 * a_vOffset,
	int32 * a_height,
	int32 * a_heightOffset);
// bool BWindow::QuitRequested()
bool mojobe_BWindow_QuitRequested(BWindow* self);
// void BWindow::InvalidateLayout(bool descendants)
void mojobe_BWindow_InvalidateLayout(BWindow* self, bool a_descendants);
// void BWindow::Layout(bool force)
void mojobe_BWindow_Layout(BWindow* self, bool a_force);
// bool BWindow::IsOffscreenWindow() const
bool mojobe_BWindow_IsOffscreenWindow(BWindow* self);
// status_t BLooper::PostMessage(uint32 command)
status_t mojobe_BWindow_PostMessage__uint32(BWindow* self, uint32 a_command);
// status_t BLooper::PostMessage(BMessage* message)
status_t mojobe_BWindow_PostMessage__BMessageP(BWindow* self,
	BMessage* a_message);
// BMessage* BLooper::CurrentMessage() const
BMessage* mojobe_BWindow_CurrentMessage(BWindow* self);
// BMessage* BLooper::DetachCurrentMessage()
BMessage* mojobe_BWindow_DetachCurrentMessage(BWindow* self);
// bool BLooper::IsMessageWaiting() const
bool mojobe_BWindow_IsMessageWaiting(BWindow* self);
// int32 BLooper::CountHandlers() const
int32 mojobe_BWindow_CountHandlers(BWindow* self);
// void BLooper::Loop()
void mojobe_BWindow_Loop(BWindow* self);
// bool BLooper::Lock()
bool mojobe_BWindow_Lock(BWindow* self);
// void BLooper::Unlock()
void mojobe_BWindow_Unlock(BWindow* self);
// bool BLooper::IsLocked() const
bool mojobe_BWindow_IsLocked(BWindow* self);
// status_t BLooper::LockWithTimeout(bigtime_t timeout)
status_t mojobe_BWindow_LockWithTimeout(BWindow* self, bigtime_t a_timeout);
// thread_id BLooper::Thread() const
int32 mojobe_BWindow_Thread(BWindow* self);
// team_id BLooper::Team() const
int32 mojobe_BWindow_Team(BWindow* self);
// thread_id BLooper::LockingThread() const
int32 mojobe_BWindow_LockingThread(BWindow* self);
// int32 BLooper::CountLocks() const
int32 mojobe_BWindow_CountLocks(BWindow* self);
// int32 BLooper::CountLockRequests() const
int32 mojobe_BWindow_CountLockRequests(BWindow* self);
// sem_id BLooper::Sem() const
int32 mojobe_BWindow_Sem(BWindow* self);
// void BHandler::SetName(const char* name)
void mojobe_BWindow_SetName(BWindow* self, const char* a_name);
// const char* BHandler::Name() const
const char* mojobe_BWindow_Name(BWindow* self);
// bool BHandler::LockLooper()
bool mojobe_BWindow_LockLooper(BWindow* self);
// status_t BHandler::LockLooperWithTimeout(bigtime_t timeout)
status_t mojobe_BWindow_LockLooperWithTimeout(BWindow* self,
	bigtime_t a_timeout);
// void BHandler::UnlockLooper()
void mojobe_BWindow_UnlockLooper(BWindow* self);
// void BHandler::SendNotices(uint32 what, const BMessage* notice)
void mojobe_BWindow_SendNotices(BWindow* self,
	uint32 a_what,
	BMessage* a_notice);