Haiku/bridge/haiku/_api.mojo


    def SetLook(self, look: window_look) raises:
        """`status_t BWindow::SetLook(window_look look)`."""
        var _result = external_call["mojobe_BWindow_SetLook", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SetLook"),
            look,
        )
        _check(_result, "BWindow::SetLook")

    def Look(self) -> window_look:
        """`window_look BWindow::Look() const`."""
        var _result = external_call["mojobe_BWindow_Look", window_look](
            _nonnull(self._as_BWindow(), "BWindow::Look"),
        )
        return _result

    def SetFeel(self, feel: window_feel) raises:
        """`status_t BWindow::SetFeel(window_feel feel)`."""
        var _result = external_call["mojobe_BWindow_SetFeel", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SetFeel"),
            feel,
        )
        _check(_result, "BWindow::SetFeel")

    def Feel(self) -> window_feel:
        """`window_feel BWindow::Feel() const`."""
        var _result = external_call["mojobe_BWindow_Feel", window_feel](
            _nonnull(self._as_BWindow(), "BWindow::Feel"),
        )
        return _result

    def SetFlags(self, arg0: UInt32) raises:
        """`status_t BWindow::SetFlags(uint32 arg0)`."""
        var _result = external_call["mojobe_BWindow_SetFlags", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SetFlags"),
            arg0,
        )
        _check(_result, "BWindow::SetFlags")

    def Flags(self) -> UInt32:
        """`uint32 BWindow::Flags() const`."""
        var _result = external_call["mojobe_BWindow_Flags", UInt32](
            _nonnull(self._as_BWindow(), "BWindow::Flags"),
        )
        return _result

    def IsModal(self) -> Bool:
        """`bool BWindow::IsModal() const`."""
        var _result = external_call["mojobe_BWindow_IsModal", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsModal"),
        )
        return _result

    def IsFloating(self) -> Bool:
        """`bool BWindow::IsFloating() const`."""
        var _result = external_call["mojobe_BWindow_IsFloating", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsFloating"),
        )
        return _result

    def SetWindowAlignment(
        self,
        mode: window_alignment,
        h: Int32,
        hOffset: Int32 = 0,
        width: Int32 = 0,
        widthOffset: Int32 = 0,
        v: Int32 = 0,
        vOffset: Int32 = 0,
        height: Int32 = 0,
        heightOffset: Int32 = 0,
    ) raises:
        """`status_t BWindow::SetWindowAlignment(window_alignment mode, int32 h, int32 hOffset, int32 width, int32 widthOffset, int32 v, int32 vOffset, int32 height, int32 heightOffset)`."""
        var _result = external_call["mojobe_BWindow_SetWindowAlignment", Int32](
            _nonnull(self._as_BWindow(), "BWindow::SetWindowAlignment"),
            mode,
            h,
            hOffset,
            width,
            widthOffset,
            v,
            vOffset,
            height,
            heightOffset,
        )
        _check(_result, "BWindow::SetWindowAlignment")

    def GetWindowAlignment(
        self,
    ) raises -> Tuple[window_alignment, Int32, Int32, Int32, Int32, Int32, Int32, Int32, Int32]:
        """`status_t BWindow::GetWindowAlignment(window_alignment* mode, int32* h, int32* hOffset, int32* width, int32* widthOffset, int32* v, int32* vOffset, int32* height, int32* heightOffset) const`."""
        var mode = window_alignment(0)
        var h = Int32(0)
        var hOffset = Int32(0)
        var width = Int32(0)
        var widthOffset = Int32(0)
        var v = Int32(0)
        var vOffset = Int32(0)
        var height = Int32(0)
        var heightOffset = Int32(0)
        var _result = external_call["mojobe_BWindow_GetWindowAlignment", Int32](
            _nonnull(self._as_BWindow(), "BWindow::GetWindowAlignment"),
            Pointer(to=mode),
            Pointer(to=h),
            Pointer(to=hOffset),
            Pointer(to=width),
            Pointer(to=widthOffset),
            Pointer(to=v),
            Pointer(to=vOffset),
            Pointer(to=height),
            Pointer(to=heightOffset),
        )
        _check(_result, "BWindow::GetWindowAlignment")
        return (
            mode,
            h,
            hOffset,
            width,
            widthOffset,
            v,
            vOffset,
            height,
            heightOffset,
        )

    def QuitRequested(self) -> Bool:
        """`bool BWindow::QuitRequested()`."""
        var _result = external_call["mojobe_BWindow_QuitRequested", Bool](
            _nonnull(self._as_BWindow(), "BWindow::QuitRequested"),
        )
        return _result

    def InvalidateLayout(self, descendants: Bool = False):
        """`void BWindow::InvalidateLayout(bool descendants)`."""
        external_call["mojobe_BWindow_InvalidateLayout", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::InvalidateLayout"),
            descendants,
        )

    def Layout(self, force: Bool):
        """`void BWindow::Layout(bool force)`."""
        external_call["mojobe_BWindow_Layout", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Layout"),
            force,
        )

    def IsOffscreenWindow(self) -> Bool:
        """`bool BWindow::IsOffscreenWindow() const`."""
        var _result = external_call["mojobe_BWindow_IsOffscreenWindow", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsOffscreenWindow"),
        )
        return _result

    def PostMessage(self, command: UInt32) raises:
        """`status_t BLooper::PostMessage(uint32 command)`."""
        var _result = external_call["mojobe_BWindow_PostMessage__uint32", Int32](
            _nonnull(self._as_BWindow(), "BWindow::PostMessage"),
            command,
        )
        _check(_result, "BLooper::PostMessage")

    def PostMessage(self, message: Some[_AsBMessage]) raises:
        """`status_t BLooper::PostMessage(BMessage* message)`."""
        var _result = external_call["mojobe_BWindow_PostMessage__BMessageP", Int32](
            _nonnull(self._as_BWindow(), "BWindow::PostMessage"),
            _addr(message._as_BMessage()),
        )
        _check(_result, "BLooper::PostMessage")

    def CurrentMessage(self) -> BMessageRef:
        """`BMessage* BLooper::CurrentMessage() const`."""
        var _result = external_call["mojobe_BWindow_CurrentMessage", Int](
            _nonnull(self._as_BWindow(), "BWindow::CurrentMessage"),
        )
        return BMessageRef(_ptr_from(_result))

    def DetachCurrentMessage(self) -> BMessageRef:
        """`BMessage* BLooper::DetachCurrentMessage()`."""
        var _result = external_call["mojobe_BWindow_DetachCurrentMessage", Int](
            _nonnull(self._as_BWindow(), "BWindow::DetachCurrentMessage"),
        )
        return BMessageRef(_ptr_from(_result))

    def IsMessageWaiting(self) -> Bool:
        """`bool BLooper::IsMessageWaiting() const`."""
        var _result = external_call["mojobe_BWindow_IsMessageWaiting", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsMessageWaiting"),
        )
        return _result

    def CountHandlers(self) -> Int32:
        """`int32 BLooper::CountHandlers() const`."""
        var _result = external_call["mojobe_BWindow_CountHandlers", Int32](
            _nonnull(self._as_BWindow(), "BWindow::CountHandlers"),
        )
        return _result

    def Loop(self):
        """`void BLooper::Loop()`."""
        external_call["mojobe_BWindow_Loop", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Loop"),
        )

    def Lock(self) -> Bool:
        """`bool BLooper::Lock()`."""
        var _result = external_call["mojobe_BWindow_Lock", Bool](
            _nonnull(self._as_BWindow(), "BWindow::Lock"),
        )
        return _result

    def Unlock(self):
        """`void BLooper::Unlock()`."""
        external_call["mojobe_BWindow_Unlock", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::Unlock"),
        )

    def IsLocked(self) -> Bool:
        """`bool BLooper::IsLocked() const`."""
        var _result = external_call["mojobe_BWindow_IsLocked", Bool](
            _nonnull(self._as_BWindow(), "BWindow::IsLocked"),
        )
        return _result

    def LockWithTimeout(self, timeout: Int64) raises:
        """`status_t BLooper::LockWithTimeout(bigtime_t timeout)`."""
        var _result = external_call["mojobe_BWindow_LockWithTimeout", Int32](
            _nonnull(self._as_BWindow(), "BWindow::LockWithTimeout"),
            timeout,
        )
        _check(_result, "BLooper::LockWithTimeout")

    def Thread(self) -> Int32:
        """`thread_id BLooper::Thread() const`."""
        var _result = external_call["mojobe_BWindow_Thread", Int32](
            _nonnull(self._as_BWindow(), "BWindow::Thread"),
        )
        return _result

    def Team(self) -> Int32:
        """`team_id BLooper::Team() const`."""
        var _result = external_call["mojobe_BWindow_Team", Int32](
            _nonnull(self._as_BWindow(), "BWindow::Team"),
        )
        return _result

    def LockingThread(self) -> Int32:
        """`thread_id BLooper::LockingThread() const`."""
        var _result = external_call["mojobe_BWindow_LockingThread", Int32](
            _nonnull(self._as_BWindow(), "BWindow::LockingThread"),
        )
        return _result

    def CountLocks(self) -> Int32:
        """`int32 BLooper::CountLocks() const`."""
        var _result = external_call["mojobe_BWindow_CountLocks", Int32](
            _nonnull(self._as_BWindow(), "BWindow::CountLocks"),
        )
        return _result

    def CountLockRequests(self) -> Int32:
        """`int32 BLooper::CountLockRequests() const`."""
        var _result = external_call["mojobe_BWindow_CountLockRequests", Int32](
            _nonnull(self._as_BWindow(), "BWindow::CountLockRequests"),
        )
        return _result

    def Sem(self) -> Int32:
        """`sem_id BLooper::Sem() const`."""
        var _result = external_call["mojobe_BWindow_Sem", Int32](
            _nonnull(self._as_BWindow(), "BWindow::Sem"),
        )
        return _result

    def SetName(self, var name: String):
        """`void BHandler::SetName(const char* name)`."""
        external_call["mojobe_BWindow_SetName", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SetName"),
            name.as_c_string_span(),
        )
        _ = name^

    def Name(self) -> String:
        """`const char* BHandler::Name() const`."""
        var _result = external_call["mojobe_BWindow_Name", Int](
            _nonnull(self._as_BWindow(), "BWindow::Name"),
        )
        return _string_from(_result)

    def LockLooper(self) -> Bool:
        """`bool BHandler::LockLooper()`."""
        var _result = external_call["mojobe_BWindow_LockLooper", Bool](
            _nonnull(self._as_BWindow(), "BWindow::LockLooper"),
        )
        return _result

    def LockLooperWithTimeout(self, timeout: Int64) raises:
        """`status_t BHandler::LockLooperWithTimeout(bigtime_t timeout)`."""
        var _result = external_call["mojobe_BWindow_LockLooperWithTimeout", Int32](
            _nonnull(self._as_BWindow(), "BWindow::LockLooperWithTimeout"),
            timeout,
        )
        _check(_result, "BHandler::LockLooperWithTimeout")

    def UnlockLooper(self):
        """`void BHandler::UnlockLooper()`."""
        external_call["mojobe_BWindow_UnlockLooper", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::UnlockLooper"),
        )

    def SendNotices(self, what: UInt32, notice: BMessageRef = BMessageRef()):
        """`void BHandler::SendNotices(uint32 what, const BMessage* notice)`."""
        external_call["mojobe_BWindow_SendNotices", NoneType](
            _nonnull(self._as_BWindow(), "BWindow::SendNotices"),
            what,
            _addr(notice._as_BMessage()),
        )
